Mapa e Listagem API BR/UF

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,5 +1,6 @@
 .container {
-  margin: 50px 0;
+  /* border: 1px solid red; */
+  margin: 50px 0 30px 0;
 }
 
 .card {
@@ -7,15 +8,15 @@
 }
 
 .infected {
-  border-bottom: 10px solid rgba(0, 0, 255, 0.5);
+  border-bottom: 10px solid rgba(65, 62, 193, 0.7);
 }
 
 .recovered {
-  border-bottom: 10px solid rgba(0, 255, 0, 0.5);
+  border-bottom: 10px solid rgba(62, 193, 65, 0.7);
 }
 
 .deaths {
-  border-bottom: 10px solid rgba(255, 0, 0, 0.5);
+  border-bottom: 10px solid rgba(193, 65, 62, 0.7);
 }
 
 @media (max-width: 770px) {
