--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -1,7 +1,7 @@
 .container {
+  /* border: 1px solid red; */
   display: flex;
   justify-content: center;
-  width: 85%;
 }
 
 @media (max-width: 770px) {
